# mission-control-center

./: .env.e2e.local.example  .env.example  .gitignore  LICENSE  NOTICE  README.en.md  README.md  install.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  release-manifest.json  server.ts  server.tsconfig.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
deploy/: deploy-dev.sh  deploy.sh
deploy/fail2ban/: README.md
deploy/mcp/openclaw-handoff/: pyproject.toml  server.py
deploy/mcp/openclaw-mem0/: README.md  cli.py  pyproject.toml  server.py
deploy/notes/: ocd-cron-qwen-auth-patch.md
deploy/release/: README.md  install.sh  mission-control.service.tmpl  upgrade.sh
messages/: en.json  zh-CN.json  zh-TW.json
scripts/: backup-extra.sh  build-release.mjs  publish-release.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-agents.ts  use-chat-session.ts  use-input-history.ts  use-is-mobile.ts  use-models-list.ts  use-pinned-messages.ts  use-sessions-list.ts  use-speech.ts  use-terminal-actions.ts
src/i18n/: navigation.ts  request.ts
src/lib/: auth.ts  db.ts  event-bus.ts  gateway-rpc.ts  gogcli.ts  live-feed.ts  model-pricing.ts  nav-items.ts  notifications.ts  openclaw.ts  schema.ts  server-env.ts  services-status.ts  sessions.ts  system-stats.ts  utils.ts  version.ts
src/store/: terminal.ts  websocket.tsx
src/types/: novnc.d.ts
tests/: README.md
tests/e2e/: agents-chat.spec.ts  browser-install.spec.ts  cron-job.spec.ts  llm-auth-kimi.spec.ts  mcc-login.setup.ts  smoke.spec.ts  (+7 more)
types/: input.d.ts
(+451 files in other folders)
