[project]
name = "openclaw-mem0-mcp"
version = "0.1.0"
description = "Self-hosted mem0 MCP server for OpenClaw. Stores customer/agent memories in local Qdrant; uses Ollama bge-m3 for embeddings; LLM provider is configurable (Gemini native or any OpenAI-compatible endpoint)."
requires-python = ">=3.10"
dependencies = [
  "mem0ai[graph]>=0.1.130",
  "mcp[cli]>=1.2.0",
  "qdrant-client>=1.12.0",
  "google-generativeai>=0.8.0",
  "ollama>=0.4.0",
  "langchain-neo4j>=0.4.0",
  "neo4j>=5.20.0",
  "kuzu>=0.11.3",
]

[project.scripts]
openclaw-mem0-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
